service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  type: NodePort
  selector:
    app: web-express
  ports:
  - port: 80
    targetPort: 3000
