ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: web-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http: 
      paths:
        - path: /
          backend:
            serviceName: web-svc
            servicePort: 80
